# vision-brain-modeling

./: .gitignore  404.html  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
approaches/: index.html
approaches/direct-mapping/: index.html
approaches/generative-conditioning/: index.html
approaches/latent-alignment/: index.html
datasets/: index.html
docs/: index.md
docs/approaches/: direct-mapping.md  generative-conditioning.md  index.md  latent-alignment.md
docs/datasets/: index.md
docs/foundations/: index.md
docs/problems/: brain-to-image-generation.md
docs/resources/: conferences.md  index.md  journals.md
docs/slides/: index.md
docs/tasks/: brain-to-image-editing.md  brain-to-image-generation.md  brain-to-image-reconstruction.md  index.md
docs/works/: challenges.md  future-directions.md  index.md  papers.md
foundations/: index.html
foundations/brain-signals/: index.html
foundations/vision-brain-modeling/: index.html
foundations/vision-models/: index.html
hooks/: slides.py
problems/brain-to-image-generation/: index.html
resources/: index.html
resources/conferences/: index.html
resources/datasets/: index.html
resources/journals/: index.html
resources/slides/: brain-to-image-editing-introduction.md  index.html  index.html.bak
search/: search_index.json
slides/: brain-to-image-editing-introduction.html  index.html
slides/brain-to-image-editing-introduction/: index.html
tasks/: index.html
tasks/brain-to-image-editing/: index.html
tasks/brain-to-image-generation/: index.html
works/: index.html
(+55 files in other folders)
